--- a/style/main1.css
+++ b/style/main1.css
@@ -1135,3 +1135,100 @@ p {
         width: 300px;
     }
 }
+
+.login-card {
+    background-color: white;
+    max-width: 800px;
+    width: 70%;
+    height: 500px;
+    max-height: 500px;
+    margin: auto;
+    margin-top: 120px;
+    box-shadow: 0 0 5px rgba(211, 211, 211, 0.4);
+    text-align: center;
+}
+
+.card-container {
+    padding-top: 30px;
+    width: 60%;
+    position: relative;
+    height: 100%;
+    background-color: white;
+}
+
+.input {
+    margin: auto;
+    text-align: center;
+    margin-top: 40px;
+    width: 70%;
+    padding: 0;
+    max-width: 300px;
+}
+
+.form {
+    z-index: 11;
+    padding: 10px;
+    border: 1px solid gray;
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    margin-bottom: 20px;
+}
+
+.foot {
+    z-index: 11;
+    width: 100%;
+    height: 50px;
+    background-image: url("../assets/blue_background.jpeg");
+    background-position: bottom;
+    background-origin: content-box;
+    position: absolute;
+    bottom: 0px;
+}
+
+.welcome {
+    background-color: transparent;
+    padding: 10px;
+    padding-top: 15px;
+    border: 1px solid white;
+    border-radius: 10px;
+    margin: auto;
+    width: 150px;
+}
+
+.welcome h3 {
+    color: white;
+}
+
+.form:focus {
+    border: 1px solid #039AD7;
+    text-decoration: none;
+}
+
+.login_btn {
+    background-color: #13659A;
+    border: 0px;
+    text-decoration: none;
+    color: white;
+    width: 100px;
+    height: 50px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.login_btn:hover {
+    cursor: pointer;
+    background-color: transparent;
+    color: #13659A;
+    border: 1px solid #13659A;
+}
+
+.col-12 {
+    text-align: left;
+    padding-left: 40px;
+}
+
+.col-12 a:hover {
+    color: black;
+}
