--- a/style/main1.css
+++ b/style/main1.css
@@ -30,6 +30,10 @@
     }
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 @keyframes scaleup {
     0% {
         scale: 1;
@@ -1138,10 +1142,10 @@ p {
 
 .login-card {
     background-color: white;
-    max-width: 800px;
-    width: 70%;
-    height: 500px;
-    max-height: 500px;
+    max-width: 1000px;
+    width: 80%;
+    height: 600px;
+    max-height: 600px;
     margin: auto;
     margin-top: 120px;
     box-shadow: 0 0 5px rgba(211, 211, 211, 0.4);
@@ -1170,7 +1174,7 @@ p {
     padding: 10px;
     border: 1px solid gray;
     border-radius: 10px;
-    width: 45%;
+    width: 100%;
     height: 100%;
     outline: none;
     margin-bottom: 20px;
@@ -1179,7 +1183,7 @@ p {
 .foot {
     z-index: 11;
     width: 100%;
-    height: 50px;
+    height: 20px;
     background-image: url("../assets/blue_background.jpeg");
     background-position: bottom;
     background-origin: content-box;
