Fixed the scrolling so its smoother and tried making the contest animation faster and smoother

--- a/style/main.css
+++ b/style/main.css
@@ -142,9 +142,11 @@
     width: 99vw;
     height: auto;
     background-image: url("../assets/cov.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-origin: border-box;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
 }
 
 #shesolves {
@@ -153,6 +155,8 @@
     background-image: url("../assets/cov2.jpg");
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-origin: border-box;
     background-size: cover;
 }
 
